[gd_scene load_steps=10 format=3 uid="uid://c6c8otkrtnw03"]

[ext_resource type="Texture2D" uid="uid://cyv6gl2b4b8mt" path="res://assets/basics/characters/slime.png" id="1_332rq"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_d65a0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_amm6x"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_ad238"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d2mwj"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [84, 85, 86, 87, 88]
}

[sub_resource type="Animation" id="Animation_vhr5m"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_qq1ov"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xqgwp"]
_data = {
"RESET": SubResource("Animation_ad238"),
"die": SubResource("Animation_d2mwj"),
"idle": SubResource("Animation_vhr5m"),
"walk": SubResource("Animation_qq1ov")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qxitd"]
radius = 79.3095

[node name="Slime" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_d65a0")

[node name="texture" type="Sprite2D" parent="."]
texture = ExtResource("1_332rq")
hframes = 7
vframes = 13

[node name="colision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_amm6x")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xqgwp")
}
autoplay = "idle"

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="colision" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_qxitd")
debug_color = Color(0.836905, 0, 0.134568, 0.42)

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
